# unit_tests

./: .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
unit_tests/: quadratic_equation.py
unit_tests/tests/: test_a_coef.py  test_discriminant.py  test_one_root.py  test_two_roots.py  test_zero_roots.py
